mabger-meter/force-app/main/default/objects/Case/fields/Date_Case_to_BME_Order_Processing__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_to_BME_Order_Processing__c</fullName>
    <label>Date - Case to BME Order Processing</label>
    <type>DateTime</type>
</CustomField>