mabger-meter/force-app/main/default/objects/Case/fields/Date_Order_Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Order_Acknowledgement_Sent__c</fullName>
    <label>Date Order Acknowledgement Sent</label>
    <type>DateTime</type>
</CustomField>