mabger-meter/force-app/main/default/objects/Case/fields/Date_Populated_when_stage_changes__c.field-meta.xml
<CustomField>
    <fullName>Date_Populated_when_stage_changes__c</fullName>
    <description>The field is used to populate the date when the stage is changed. Is used for reporting</description>
    <label>Date Populated when stage changes</label>
    <type>DateTime</type>
</CustomField>