mabger-meter/force-app/main/default/objects/Case/fields/Date_RMA_Analysis_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_RMA_Analysis_Sent__c</fullName>
    <label>Date RMA Analysis Sent</label>
    <type>DateTime</type>
</CustomField>