mabger-meter/force-app/main/default/objects/Case/fields/Days_Taken_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Taken_to_Close__c</fullName>
    <formula>ClosedDate -  CreatedDate</formula>
    <label>Days Taken to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>