mabger-meter/force-app/main/default/objects/Case/fields/Days_taken_to_Close_from_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_taken_to_Close_from_Due_Date__c</fullName>
    <description>Field is for Reporting Only.
Days taken to Close a case from Duedate</description>
    <formula>DATEVALUE( ClosedDate ) -  Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days taken to Close from Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>