mabger-meter/force-app/main/default/objects/Case/fields/Days_Taken_to_Close_from_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Taken_to_Close_from_Submit_Date__c</fullName>
    <description>Field is only for reporting . 	
Days Taken to Close the case from data Submit Date .</description>
    <formula>DATEVALUE( ClosedDate ) - Data_Submit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Taken to Close from Submit Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>