mabger-meter/force-app/main/default/objects/Case/fields/Days_Taken_to_Open_from_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Taken_to_Open_from_Submit_Date__c</fullName>
    <description>Field is for Reporting only.
Days taken to Open a Case from Data Submit Date .</description>
    <formula>DATEVALUE( CreatedDate ) -  Data_Submit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Taken to Open from Submit Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>