mabger-meter/force-app/main/default/objects/Case/fields/Deferred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the revenue is defferred for future</inlineHelpText>
    <label>Deferred Revenue</label>
    <type>Checkbox</type>
</CustomField>