mabger-meter/force-app/main/default/objects/Case/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Distributor Account)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>