mabger-meter/force-app/main/default/objects/Case/fields/Distributor_Sales_Person2__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Sales_Person2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Sales Person2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>