mabger-meter/force-app/main/default/objects/Case/fields/Distributor_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Sales Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Distributor_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Distributor Sales Person1)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>