mabger-meter/force-app/main/default/objects/Case/fields/Dock_Received__c.field-meta.xml
<CustomField>
    <fullName>Dock_Received__c</fullName>
    <label>Dock Received</label>
    <type>DateTime</type>
</CustomField>