mabger-meter/force-app/main/default/objects/Case/fields/Driving_Hours__c.field-meta.xml
<CustomField>
    <fullName>Driving_Hours__c</fullName>
    <label>Driving Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>