mabger-meter/force-app/main/default/objects/Case/fields/Dummy_Field__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Field__c</fullName>
    <label>Dummy Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>