mabger-meter/force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>75</length>
    <type>Text</type>
</CustomField>