mabger-meter/force-app/main/default/objects/Case/fields/Email_to_Case_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Case_Address__c</fullName>
    <description>Original email address case was sent to.</description>
    <inlineHelpText>If this is an E2C case, stamps the original set to address on the case. populated via PB</inlineHelpText>
    <label>Email-to-Case Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>