mabger-meter/force-app/main/default/objects/Case/fields/End_User_Company__c.field-meta.xml
<CustomField>
    <fullName>End_User_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this case was opened on behalf of someone, please indicated the &quot;End User&quot;Account here.</inlineHelpText>
    <label>End User Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Direct End Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Listed as End User Company)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>