mabger-meter/force-app/main/default/objects/Case/fields/End_User_Company_Name_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>End_User_Company_Name_Customer_No__c</fullName>
    <description>This field is populated in the community by Partners and then used as reference by internal users to populated &quot;End User Company.&quot;</description>
    <inlineHelpText>Please provide the name and customer number (if known) of the End User Company</inlineHelpText>
    <label>End User Company Name &amp; Customer No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>