mabger-meter/force-app/main/default/objects/Case/fields/End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this case was opened on behalf of someone, please indicated the &quot;End User&quot; Contact here.</inlineHelpText>
    <label>End User Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.End_User_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (End User Contact)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>