mabger-meter/force-app/main/default/objects/Case/fields/End_User_Contact_Name_Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact_Name_Email_Phone__c</fullName>
    <description>This field is populated in the community by Partners and then used as reference by internal users to populated &quot;End User Contact.&quot;</description>
    <inlineHelpText>Please provide a name contact information for a person at the End User Company.</inlineHelpText>
    <label>End User Contact Name &amp; Email/Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>