mabger-meter/force-app/main/default/objects/Case/fields/End_User_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>End_User_Customer_Number__c</fullName>
    <formula>End_User_Company__r.Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Customer Number</label>
    <type>Text</type>
</CustomField>