mabger-meter/force-app/main/default/objects/Case/fields/End_User_Email__c.field-meta.xml
<CustomField>
    <fullName>End_User_Email__c</fullName>
    <formula>End_User_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Email</label>
    <type>Text</type>
</CustomField>