mabger-meter/force-app/main/default/objects/Case/fields/Endpoint_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Installation_Type__c</fullName>
    <label>Endpoint Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Pits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>