mabger-meter/force-app/main/default/objects/Case/fields/Endpoint_Installation_Types__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Installation_Types__c</fullName>
    <label>Endpoint Installation Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pits</fullName>
            </value>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>