mabger-meter/force-app/main/default/objects/Case/fields/Endpoint_Type__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Type__c</fullName>
    <label>Endpoint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Endpoint_Type</valueSetName>
    </valueSet>
</CustomField>