mabger-meter/force-app/main/default/objects/Case/fields/Endpoints_with_AT_T_Roaming_Service__c.field-meta.xml
<CustomField>
    <fullName>Endpoints_with_AT_T_Roaming_Service__c</fullName>
    <label>Endpoints with AT&amp;T Roaming Service</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>