mabger-meter/force-app/main/default/objects/Case/fields/Engineering_Assistance_Required__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Assistance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Assistance Required</label>
    <type>Checkbox</type>
</CustomField>