mabger-meter/force-app/main/default/objects/Case/fields/ER_Number__c.field-meta.xml
<CustomField>
    <fullName>ER_Number__c</fullName>
    <label>ER Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>