mabger-meter/force-app/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <inlineHelpText>Provide a reason the case is &quot;Escalated.&quot;</inlineHelpText>
    <label>Escalation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>