mabger-meter/force-app/main/default/objects/Case/fields/Evaluator_Name__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Name__c</fullName>
    <label>Evaluator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>