mabger-meter/force-app/main/default/objects/Case/fields/Excluded_from_FCR__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_FCR__c</fullName>
    <description>temporary field to only be used in FCR metric proof. criteria for FCR Inclusion should be maintained at the report level</description>
    <formula>IF(
OR(
ISPICKVAL(Inquiry_Reason__c,&quot;SPAM&quot;),
ISPICKVAL(Inquiry_Reason__c,&quot;Duplicate Case&quot;),
ISPICKVAL(Case_Resolution__c,&quot;Duplicate Child Case&quot;)),
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>temporary field to only be used in FCR metric proof. criteria for FCR Inclusion should be maintained at the report level</inlineHelpText>
    <label>Excluded from FCR</label>
    <type>Checkbox</type>
</CustomField>