mabger-meter/force-app/main/default/objects/Case/fields/First_Closed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Closed_DateTime__c</fullName>
    <description>timestamp the first time a case closes to drive the initiation of the FCR Metric</description>
    <label>First Closed DateTime</label>
    <type>DateTime</type>
</CustomField>