mabger-meter/force-app/main/default/objects/Case/fields/First_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Owner__c</fullName>
    <description>stamps the text of the first owner for reporting and historic purposes</description>
    <label>First Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>