mabger-meter/force-app/main/default/objects/Case/fields/First_User_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_User_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First User Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>