mabger-meter/force-app/main/default/objects/Case/fields/First_User_Case_Owner_Alert__c.field-meta.xml
<CustomField>
    <fullName>First_User_Case_Owner_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First User Case Owner Alert</label>
    <type>Checkbox</type>
</CustomField>