mabger-meter/force-app/main/default/objects/Case/fields/FollowUp_Date1__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Date1__c</fullName>
    <label>FollowUp Rule Date</label>
    <type>Date</type>
</CustomField>