mabger-meter/force-app/main/default/objects/Case/fields/FollowUp_Date__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Date__c</fullName>
    <description>Is auto populated with +7days from created Date only at the time of creating the record (WFR)</description>
    <label>FollowUp Date</label>
    <type>Date</type>
</CustomField>