mabger-meter/force-app/main/default/objects/Case/fields/Full_Contract_s__c.field-meta.xml
<CustomField>
    <fullName>Full_Contract_s__c</fullName>
    <label>Full Contract $&apos;s</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>