mabger-meter/force-app/main/default/objects/Case/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>