mabger-meter/force-app/main/default/objects/Case/fields/Hidden_Reason_Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Reason_Return_Type__c</fullName>
    <formula>TEXT(Return_Type__c) &amp; &quot; - &quot; &amp; TEXT(Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Reason Return Type</label>
    <type>Text</type>
</CustomField>