mabger-meter/force-app/main/default/objects/Case/fields/Hours_Spent_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent_on_Case__c</fullName>
    <label>Hours Spent on Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>