mabger-meter/force-app/main/default/objects/Case/fields/icatp__Slayed_File_Count__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slayed_File_Count__c</fullName>
    <description>Total number of attachments deleted by File Slayer.</description>
    <label>Slayed File Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>