mabger-meter/force-app/main/default/objects/Case/fields/icatp__Slayed_File_Names__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slayed_File_Names__c</fullName>
    <description>Names of all attachments deleted by File Slayer.</description>
    <label>Slayed File Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>