mabger-meter/force-app/main/default/objects/Case/fields/icatp__Slayed_File_Size_Total__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slayed_File_Size_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Combined file size of all attachments deleted by File Slayer.</description>
    <label>Slayed File Size Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>