mabger-meter/force-app/main/default/objects/Case/fields/Inquiry_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Reason__c</fullName>
    <label>Inquiry Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Broken/Repair</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Credit Status</fullName>
            </value>
            <value>
                <fullName>Customer Setup</fullName>
            </value>
            <value>
                <fullName>Placing Order</fullName>
            </value>
            <value>
                <fullName>Damaged/Faulty</fullName>
            </value>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Form Requests</fullName>
            </value>
            <value>
                <fullName>Hardware Application</fullName>
            </value>
            <value>
                <fullName>Installation/Set Up</fullName>
            </value>
            <value>
                <fullName>Invoice Disputed</fullName>
            </value>
            <value>
                <fullName>Invoice Payment</fullName>
            </value>
            <value>
                <fullName>Invoice Inquiry</fullName>
            </value>
            <value>
                <fullName>New Quote</fullName>
            </value>
            <value>
                <fullName>Order Revision</fullName>
            </value>
            <value>
                <fullName>Order Status</fullName>
            </value>
            <value>
                <fullName>Documentation Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Operation</fullName>
            </value>
            <value>
                <fullName>Quote Status</fullName>
            </value>
            <value>
                <fullName>Restock</fullName>
            </value>
            <value>
                <fullName>Return Case</fullName>
            </value>
            <value>
                <fullName>Revise Quote</fullName>
            </value>
            <value>
                <fullName>RMA Status</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Software Application</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>