mabger-meter/force-app/main/default/objects/Case/fields/Installation_Company__c.field-meta.xml
<CustomField>
    <fullName>Installation_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Installation Company)</relationshipLabel>
    <relationshipName>Case3</relationshipName>
    <type>Lookup</type>
</CustomField>