mabger-meter/force-app/main/default/objects/Case/fields/Installation_Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Installation_Company_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Company Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Installation_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Installation Company Contact)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>