mabger-meter/force-app/main/default/objects/Case/fields/Installs_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Installs_To_Date__c</fullName>
    <label>Installs To Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>