mabger-meter/force-app/main/default/objects/Case/fields/Interface_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interface_Notes__c</fullName>
    <label>Interface Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>