mabger-meter/force-app/main/default/objects/Case/fields/Internal_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal Contact / Badger Meter Employee associated with the Case</description>
    <inlineHelpText>Internal Contact / Badger Meter Employee associated with the Case</inlineHelpText>
    <label>Internal Contact Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>