mabger-meter/force-app/main/default/objects/Case/fields/Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Id__c</fullName>
    <label>Issue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>