mabger-meter/force-app/main/default/objects/Case/fields/Issue_Start__c.field-meta.xml
<CustomField>
    <fullName>Issue_Start__c</fullName>
    <label>Issue Start</label>
    <type>Date</type>
</CustomField>