mabger-meter/force-app/main/default/objects/Case/fields/IT_Availability__c.field-meta.xml
<CustomField>
    <fullName>IT_Availability__c</fullName>
    <label>IT Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>