mabger-meter/force-app/main/default/objects/Case/fields/JIRA_Engineering_Request__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Engineering_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JIRA / QCBD / Engineering Request</label>
    <type>Checkbox</type>
</CustomField>