mabger-meter/force-app/main/default/objects/Case/fields/Maintenance_Agreement_s__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Agreement_s__c</fullName>
    <inlineHelpText>This value is for Maintenance Agreement $’s post deployment.</inlineHelpText>
    <label>Maintenance Agreement $&apos;s</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>