mabger-meter/force-app/main/default/objects/Case/fields/Map_Service_Area_radius__c.field-meta.xml
<CustomField>
    <fullName>Map_Service_Area_radius__c</fullName>
    <label>Map Service Area (radius)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>