mabger-meter/force-app/main/default/objects/Case/fields/Marked_SPAM__c.field-meta.xml
<CustomField>
    <fullName>Marked_SPAM__c</fullName>
    <description>Used to report on SPAM percentages</description>
    <formula>TEXT(Inquiry_Reason__c)=&quot;SPAM&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marked SPAM</label>
    <type>Checkbox</type>
</CustomField>