mabger-meter/force-app/main/default/objects/Case/fields/Most_Recent_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Response_Received__c</fullName>
    <description>Populated via process builder</description>
    <label>Most Recent Response Received</label>
    <type>DateTime</type>
</CustomField>