mabger-meter/force-app/main/default/objects/Case/fields/Nemo_Tool_Number__c.field-meta.xml
<CustomField>
    <fullName>Nemo_Tool_Number__c</fullName>
    <label>Nemo Tool Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>