mabger-meter/force-app/main/default/objects/Case/fields/Network_Type__c.field-meta.xml
<CustomField>
    <fullName>Network_Type__c</fullName>
    <label>Network Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>