mabger-meter/force-app/main/default/objects/Case/fields/Network_Types__c.field-meta.xml
<CustomField>
    <fullName>Network_Types__c</fullName>
    <label>Network Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTE-M</fullName>
            </value>
            <value>
                <fullName>LTE-MS</fullName>
            </value>
            <value>
                <fullName>ORION SE</fullName>
            </value>
            <value>
                <fullName>LTE</fullName>
            </value>
            <value>
                <fullName>CDMA</fullName>
            </value>
            <value>
                <fullName>Insufficient</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>