mabger-meter/force-app/main/default/objects/Case/fields/New_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Address__c</fullName>
    <inlineHelpText>If the Account isn&apos;t in Salesforce, this field can be used to capture the Account&apos;s address.</inlineHelpText>
    <label>New Account Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>