mabger-meter/force-app/main/default/objects/Case/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <inlineHelpText>If the Account isn&apos;t already in Salesforce, this field may be used to identify an Account&apos;s Name.</inlineHelpText>
    <label>New Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>