mabger-meter/force-app/main/default/objects/Case/fields/New_Account_State__c.field-meta.xml
<CustomField>
    <fullName>New_Account_State__c</fullName>
    <inlineHelpText>If the Account isn&apos;t in Salesforce, this field can be used to capture the Account&apos;s state.</inlineHelpText>
    <label>New Account State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>