mabger-meter/force-app/main/default/objects/Case/fields/New_Account_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Zip_Postal_Code__c</fullName>
    <inlineHelpText>If the Account isn&apos;t in Salesforce, this field can be used to capture the Account&apos;s zip/postal code.</inlineHelpText>
    <label>New Account Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>