mabger-meter/force-app/main/default/objects/Case/fields/New_or_Existing_Product__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Product__c</fullName>
    <label>New or Existing Product?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>